--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "@nuxtjs/bulma": "^1.2.1"
+    "@nuxtjs/bulma": "^1.2.1",
+    "jquery": "^3.4.1",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {}
 }
